k8s/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: banking-transaction
  labels:
    name: banking-transaction
