k8s/manifests/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banking-transaction-service
  namespace: banking-transaction
  labels:
    app: banking-transaction-service
spec:
  type: NodePort
  selector:
    app: banking-transaction-service
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
    nodePort: 30080
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  name: banking-transaction-service-internal
  namespace: banking-transaction
  labels:
    app: banking-transaction-service
spec:
  type: ClusterIP
  selector:
    app: banking-transaction-service
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
